# ChoreSync

./: .gitignore  DecisionLog.tex  LICENSE  ProgressTracker.html  README.md  ReadMe.md  SystemDesign.tex  choresync-notes-ARCHIVED.tex  progress-data.js  pytest.ini  requirements.txt
backend/: .dockerignore  Dockerfile  badges.json  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  reset_db.ps1  seed_badges.py
backend/chore_sync/: __init__.py  admin.py  app.py  apps.py  asgi.py  celery.py  django_app.py  domain_errors.py  models.py  onDelete cases.ipynb  settings.py  sse.py  tasks.py  urls.py  wsgi.py
backend/chore_sync/api/: auth_router.py  calendar_router.py  chatbot_router.py  group_router.py  invitation_router.py  jwt_views.py  marketplace_router.py  messaging_router.py  notification_router.py  outlook_calendar_router.py  preference_router.py  proposal_router.py  serializers.py  stats_router.py  task_router.py  task_template_router.py  views.py
backend/chore_sync/django_app/: __init__.py  consumers.py  middleware.py
backend/chore_sync/domain/: models.py
backend/chore_sync/dtos/: user_dtos.py
backend/chore_sync/fixtures/: badges.json
backend/chore_sync/migrations/: 0001_initial.py  0002_groupmembership_joined_at_alter_group_group_code_and_more.py  0003_calendar_include_in_availability_and_more.py  0004_tasktemplate_importance_user_email_verified_and_more.py  0005_emaillog_passwordresettoken.py  0006_user_timezone.py  0007_event_external_etag_external_updated.py  0008_calendar_writable.py  0009_calendar_webhooks.py  0014_step17_calendar_refactor.py  (+40 more)
(+243 files in other folders)
