[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chore-sync-backend"
version = "0.1.0"
description = "Backend scaffolding for the ChoreSync coordination platform."
requires-python = ">=3.11"
dependencies = [
     "django>=5.1.0",
     "channels>=4.0.0",
     "daphne>=4.0.0",
     "django-celery-results>=2.5.0",
     "django-auditlog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

